--- a/audio/audio_policy.conf
+++ b/audio/audio_policy.conf
@@ -83,7 +83,7 @@ audio_hw_modules {
         devices AUDIO_DEVICE_OUT_TELEPHONY_TX
       }
       voip_rx {
-        sampling_rates 8000|16000
+        sampling_rates 8000|16000|32000|48000
         channel_masks AUDIO_CHANNEL_OUT_MONO
         formats AUDIO_FORMAT_PCM_16_BIT|AUDIO_FORMAT_AMR_NB|AUDIO_FORMAT_AMR_WB|AUDIO_FORMAT_QCELP|AUDIO_FORMAT_EVRC|AUDIO_FORMAT_EVRCB|AUDIO_FORMAT_EVRCWB|AUDIO_FORMAT_EVRCNW
         devices AUDIO_DEVICE_OUT_SPEAKER|AUDIO_DEVICE_OUT_EARPIECE|AUDIO_DEVICE_OUT_WIRED_HEADSET|AUDIO_DEVICE_OUT_WIRED_HEADPHONE|AUDIO_DEVICE_OUT_LINE|AUDIO_DEVICE_OUT_ALL_SCO
