--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -173,6 +173,8 @@ on boot
     chown system system /sys/class/leds/blue/start_idx
     chown system system /sys/class/leds/green/start_idx
 
+    chown system system /sys/class/leds/rgb/rgb_blink
+
     chmod 660 /sys/class/leds/red/ramp_step_ms
     chmod 660 /sys/class/leds/green/ramp_step_ms
     chmod 660 /sys/class/leds/blue/ramp_step_ms
@@ -182,7 +184,7 @@ on boot
     chmod 660 /sys/class/leds/red/start_idx
     chmod 660 /sys/class/leds/green/start_idx
     chmod 660 /sys/class/leds/blue/start_idx
-
+    chmod 660 /sys/class/leds/rgb/rgb_blink
 
     chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
     chown bluetooth net_bt /sys/class/rfkill/rfkill0/type
@@ -1409,3 +1411,45 @@ service seemp_healthd /system/vendor/bin/seemp_healthd
     class late_start
     user system
     group system
+
+# such color
+on property:sys.rainbow.recovery=1
+    write /sys/class/leds/red/brightness 255
+    write /sys/class/leds/red/start_idx 0
+    write /sys/class/leds/red/duty_pcts "100,100,100,0,0,50,100"
+    write /sys/class/leds/red/pause_hi 0
+    write /sys/class/leds/red/pause_lo 0
+    write /sys/class/leds/red/ramp_step_ms 100
+    write /sys/class/leds/green/brightness 255
+    write /sys/class/leds/green/start_idx 7
+    write /sys/class/leds/green/duty_pcts "0,50,100,100,0,0,0"
+    write /sys/class/leds/green/pause_hi 0
+    write /sys/class/leds/green/pause_lo 0
+    write /sys/class/leds/green/ramp_step_ms 100
+    write /sys/class/leds/blue/brightness 255
+    write /sys/class/leds/blue/start_idx 14
+    write /sys/class/leds/blue/duty_pcts "0,0,0,0,100,100,100"
+    write /sys/class/leds/blue/pause_hi 0
+    write /sys/class/leds/blue/pause_lo 0
+    write /sys/class/leds/blue/ramp_step_ms 100
+    write /sys/class/leds/rgb/rgb_blink 1
+
+on property:sys.rainbow.recovery=0
+    write /sys/class/leds/rgb/rgb_blink 0
+
+# happy dance!
+on post-fs-data
+    write /sys/class/leds/rgb/rgb_blink 0
+    write /sys/class/leds/blue/blink 0
+    write /sys/class/leds/red/blink 0
+    write /sys/class/leds/rgb/rgb_blink 0
+    write /sys/class/leds/blue/brightness 255
+    write /sys/class/leds/green/brightness 255
+    write /sys/class/leds/red/brightness 0
+    write /sys/class/leds/green/start_idx 0
+    write /sys/class/leds/green/pause_hi 0
+    write /sys/class/leds/green/pause_lo 0
+    write /sys/class/leds/green/ramp_step_ms 50
+    write /sys/class/leds/green/duty_pcts "16,25,33,41,50,58,66,74,83,91,100"
+    write /sys/class/leds/green/blink 1
+
