init: power: fix triggering enable-low-power
late_start is gone, trigger enable-low-power when bootup is completed

Change-Id: Ia60636a6d75bccfb9e39fb6bb468a7e2e73dbe81
Signed-off-by: Alexander Martinz <eviscerationls@gmail.com>

--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -116,7 +116,7 @@ on charger
     write /sys/module/lpm_levels/parameters/sleep_disabled 0
     start dashd
 
-on class_start:late_start
+on property:sys.boot_completed=1
     trigger enable-low-power
 
 on property:init.svc.recovery=running
