--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -34,6 +34,7 @@ on early-init
     symlink /data/tombstones /tombstones
     mkdir /dsp 0771 media media
     mount debugfs debugfs /sys/kernel/debug
+    chmod 0755 /sys/kernel/debug
 
 on init
     export LD_SHIM_LIBS /system/lib/hw/camera.msm8996.so|libcamera_shim.so:/system/lib/libopcamerahw_interface.so|libcamera_shim.so
