op3: set CFQ as default IO sched
CFQ is the fastest IO scheduler available for OP3 in 3.18 kernel

Change-Id: I0ce1726c6400cb2dd12977b6c7984ee8e6ff66f9

--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -127,4 +127,4 @@ on property:init.svc.recovery=running
     trigger enable-low-power
 
 on property:dev.bootcomplete=1
-    setprop sys.io.scheduler "bfq"
+    setprop sys.io.scheduler "cfq"
