op3: Update for Open Beta 7 blobs
Change-Id: I2489e783dba68a31ee1dac2d685acba133c064c5

--- a/configs/nfc/libnfc-nxp.conf
+++ b/configs/nfc/libnfc-nxp.conf
@@ -1,4 +1,4 @@
-#FW_VERSION=ALMSL 10.01.1A
+#FW_VERSION=ALMSL 10.01.1C
 #DEVICE_MANUFACTURER=NXP
 #DEVICE_MODEL=548
 
@@ -77,7 +77,7 @@ NXP_SWP_FULL_PWR_ON=0x00
 # eSE               - 0x01
 # UICC              - 0x02
 # Multi SE          - 0x03
-NXP_DEFAULT_SE=0x01
+NXP_DEFAULT_SE=0x03
 
 ###############################################################################
 # Set the default AID route Location :
@@ -225,16 +225,18 @@ NXP_CORE_STANDBY={2F, 00, 01, 01}
 NXP_CORE_RF_FIELD={20, 02, 05, 01, A0, 62, 01, 01}
 
 ###############################################################################
-# NXP RF ALMSL configuration settings for FW VERSION = 10.01.1A
+# NXP RF ALMSL configuration settings for FW VERSION = 10.01.1C
 #
 #    A0, 0D, 03, 00, 40, 01                RF_CLIF_CFG_BOOT            CLIF_ANA_NFCLD_REG
 #    A0, 0D, 06, 00, FF, 05, 04, 06, 00    RF_CLIF_CFG_BOOT            SMU_PMU_REG (0x40024010)
 #    A0, 0D, 06, 00, 35, FF, 01, FF, 02    RF_CLIF_CFG_BOOT            CLIF_AGC_INPUT_REG
 #    A0, 0D, 06, 00, 33, 07, 40, 00, 00    RF_CLIF_CFG_BOOT            CLIF_AGC_CONFIG0_REG
+#    A0, 0D, 03, 02, 40, 00                RF_CLIF_CFG_IDLE            CLIF_ANA_NFCLD_REG
 #    A0, 0D, 03, 04, 43, 20                RF_CLIF_CFG_INITIATOR       CLIF_ANA_PBF_CONTROL_REG
 #    A0, 0D, 03, 04, 47, 02                RF_CLIF_CFG_INITIATOR       CLIF_ANA_AGC_REG
 #    A0, 0D, 06, 04, 35, F4, 01, F4, 01    RF_CLIF_CFG_INITIATOR       CLIF_AGC_INPUT_REG
 #    A0, 0D, 06, 04, FF, 05, 00, 00, 00    RF_CLIF_CFG_INITIATOR       SMU_PMU_REG (0x40024010)
+#    A0, 0D, 06, 05, 45, 80, 40, 00, 00    RF_CLIF_CFG_INITIATOR       CLIF_ANA_CM_CONFIG_REG
 #    A0, 0D, 06, 05, 35, FF, 01, FF, 02    RF_CLIF_CFG_INITIATOR       CLIF_AGC_INPUT_REG
 #    A0, 0D, 06, 05, 33, 07, 40, 00, 00    RF_CLIF_CFG_INITIATOR       CLIF_AGC_CONFIG0_REG
 #    A0, 0D, 06, 06, 44, A3, 90, 03, 00    RF_CLIF_CFG_TARGET          CLIF_ANA_RX_REG
@@ -256,6 +258,7 @@ NXP_CORE_RF_FIELD={20, 02, 05, 01, A0, 62, 01, 01}
 #    A0, 0D, 06, 06, FF, 05, 00, 00, 00    RF_CLIF_CFG_TARGET          SMU_PMU_REG (0x40024010)
 #    A0, 0D, 03, 07, 3F, 00                RF_CLIF_CFG_TARGET          CLIF_TEST_CONTROL_REG
 #    A0, 0D, 06, 07, 35, FF, 01, FF, 02    RF_CLIF_CFG_TARGET          CLIF_AGC_INPUT_REG
+#    A0, 0D, 06, 07, 33, 07, 40, 00, 00    RF_CLIF_CFG_TARGET          CLIF_AGC_CONFIG0_REG
 #    A0, 0D, 06, 18, 34, 00, 00, E1, 03    RF_CLIF_CFG_TECHNO_I_RXB    CLIF_AGC_CONFIG1_REG
 #    A0, 0D, 06, 18, 33, 0F, 83, 00, 00    RF_CLIF_CFG_TECHNO_I_RXB    CLIF_AGC_CONFIG0_REG
 #    A0, 0D, 06, 1C, 34, 00, 00, E1, 03    RF_CLIF_CFG_TECHNO_I_RXF_P  CLIF_AGC_CONFIG1_REG
@@ -273,7 +276,7 @@ NXP_CORE_RF_FIELD={20, 02, 05, 01, A0, 62, 01, 01}
 #    A0, 0D, 03, 32, 0D, 22                RF_CLIF_CFG_BR_106_I_TXA    CLIF_TX_DATA_MOD_REG
 #    A0, 0D, 03, 32, 14, 22                RF_CLIF_CFG_BR_106_I_TXA    CLIF_TX_SYMBOL23_MOD_REG
 #    A0, 0D, 06, 32, 4A, 33, 07, 00, 08    RF_CLIF_CFG_BR_106_I_TXA    CLIF_ANA_TX_SHAPE_CONTROL_REG
-#    A0, 0D, 06, 34, 2D, 24, 57, 0C, 00    RF_CLIF_CFG_BR_106_I_RXA_P  CLIF_SIGPRO_RM_CONFIG1_REG
+#    A0, 0D, 06, 34, 2D, 24, 47, 0C, 00    RF_CLIF_CFG_BR_106_I_RXA_P  CLIF_SIGPRO_RM_CONFIG1_REG
 #    A0, 0D, 06, 34, 34, 00, 00, EC, 03    RF_CLIF_CFG_BR_106_I_RXA_P  CLIF_AGC_CONFIG1_REG
 #    A0, 0D, 06, 34, 33, 0F, 01, 01, 70    RF_CLIF_CFG_BR_106_I_RXA_P  CLIF_AGC_CONFIG0_REG
 #    A0, 0D, 04, 34, 44, 21, 00            RF_CLIF_CFG_BR_106_I_RXA_P  CLIF_ANA_RX_REG
@@ -391,206 +394,217 @@ NXP_CORE_RF_FIELD={20, 02, 05, 01, A0, 62, 01, 01}
 #    A0, 0D, 03, 28, 41, 40                RF_CLIF_CFG_TECHNO_T_TXB    CLIF_ANA_TX_CLK_CONTROL_REG
 #    A0, 0D, 03, 8A, 41, 40                RF_CLIF_CFG_BR_212_T_TXF_P  CLIF_ANA_TX_CLK_CONTROL_REG
 #    A0, 0D, 03, 90, 41, 40                RF_CLIF_CFG_BR_424_T_TXF_P  CLIF_ANA_TX_CLK_CONTROL_REG
+#    A0, 0D, 03, 08, 40, 10                RF_CLIF_CFG_I_PASSIVE       CLIF_ANA_NFCLD_REG
+#    A0, 0D, 06, 08, 45, C0, 82, 00, 00    RF_CLIF_CFG_I_PASSIVE       CLIF_ANA_CM_CONFIG_REG
+#    A0, 0D, 06, 0A, 44, A3, 90, 03, 00    RF_CLIF_CFG_I_ACTIVE        CLIF_ANA_RX_REG
+#    A0, 0D, 06, 0A, 45, 80, 40, 00, 00    RF_CLIF_CFG_I_ACTIVE        CLIF_ANA_CM_CONFIG_REG
 #    A0, 0D, 06, 0A, 30, C8, 00, 64, 00    RF_CLIF_CFG_I_ACTIVE        CLIF_SIGPRO_ADCBCM_THRESHOLD_REG
 #    A0, 0D, 06, 0A, 2F, AF, 05, 80, 17    RF_CLIF_CFG_I_ACTIVE        CLIF_SIGPRO_ADCBCM_CONFIG_REG
 #    A0, 0D, 03, 0A, 48, 10                RF_CLIF_CFG_I_ACTIVE        CLIF_ANA_CLK_MAN_REG
-#    A0, 0D, 06, 0A, 44, A3, 90, 03, 00    RF_CLIF_CFG_I_ACTIVE        CLIF_ANA_RX_REG
 #    A0, 0D, 06, 0A, 34, 26, 65, E5, 03    RF_CLIF_CFG_I_ACTIVE        CLIF_AGC_CONFIG1_REG
 #    A0, 0D, 06, 0A, 33, 0F, 01, 00, 70    RF_CLIF_CFG_I_ACTIVE        CLIF_AGC_CONFIG0_REG
+#    A0, 0D, 03, 0A, 40, 00                RF_CLIF_CFG_I_ACTIVE        CLIF_ANA_NFCLD_REG
 #
-# *** ALMSL FW VERSION = 10.01.1A ***
+# *** ALMSL FW VERSION = 10.01.1C ***
 NXP_RF_CONF_BLK_1={
-    20, 02, F4, 1F, 
-    A0, 0D, 03, 00, 40, 03,
-    A0, 0D, 06, 00, FF, 05, 04, 06, 00,
+    20, 02, FA, 20, 
+    A0, 0D, 03, 00, 40, 01, 
+    A0, 0D, 06, 00, FF, 05, 04, 06, 00, 
     A0, 0D, 06, 00, 35, FF, 01, FF, 02,
     A0, 0D, 06, 00, 33, 07, 40, 00, 00,
-    A0, 0D, 03, 04, 43, 20,
+    A0, 0D, 03, 02, 40, 00,
+    A0, 0D, 03, 04, 43, 20, 
     A0, 0D, 03, 04, 47, 02,
-    A0, 0D, 06, 04, 35, F4, 01, F4, 01,
-    A0, 0D, 06, 04, FF, 05, 00, 00, 00,
+    A0, 0D, 06, 04, 35, F4, 01, F4, 01, 
+    A0, 0D, 06, 04, FF, 05, 00, 00, 00, 
+    A0, 0D, 06, 05, 45, 80, 40, 00, 00,
     A0, 0D, 06, 05, 35, FF, 01, FF, 02,
     A0, 0D, 06, 05, 33, 07, 40, 00, 00,
-    A0, 0D, 06, 06, 44, A3, 90, 03, 00,
+    A0, 0D, 06, 06, 44, A3, 90, 03, 00, 
     A0, 0D, 03, 06, 47, 02,
     A0, 0D, 06, 06, 35, FF, 03, FF, 03,
     A0, 0D, 06, 06, 34, F7, 7F, 00, 10,
     A0, 0D, 06, 06, 33, 03, 40, 00, 00,
-    A0, 0D, 06, 06, 30, C8, 00, 64, 00,
-    A0, 0D, 06, 06, 2F, AF, 05, 80, 17,
-    A0, 0D, 06, 06, 03, 00, 71, 00, 20,
-    A0, 0D, 03, 06, 43, 20,
-    A0, 0D, 06, 06, 42, 00, 00, F2, F2,
-    A0, 0D, 03, 06, 41, 40,
-    A0, 0D, 03, 06, 37, 08,
-    A0, 0D, 03, 06, 16, 00,
-    A0, 0D, 03, 06, 15, 00,
-    A0, 0D, 03, 06, 3F, 04,
-    A0, 0D, 03, 06, 80, 03,
-    A0, 0D, 06, 06, FF, 05, 00, 00, 00,
-    A0, 0D, 03, 07, 3F, 00,
+    A0, 0D, 06, 06, 30, B0, 00, 10, 00, 
+    A0, 0D, 06, 06, 2F, AF, 05, 80, 17, 
+    A0, 0D, 06, 06, 03, 00, 70, 00, 20, 
+    A0, 0D, 03, 06, 43, 20, 
+    A0, 0D, 06, 06, 42, 00, 00, FF, F1, 
+    A0, 0D, 03, 06, 41, 40, 
+    A0, 0D, 03, 06, 37, 08, 
+    A0, 0D, 03, 06, 16, 00, 
+    A0, 0D, 03, 06, 15, 00, 
+    A0, 0D, 03, 06, 3F, 04, 
+    A0, 0D, 03, 06, 80, 03, 
+    A0, 0D, 06, 06, FF, 05, 00, 00, 00, 
+    A0, 0D, 03, 07, 3F, 00, 
     A0, 0D, 06, 07, 35, FF, 01, FF, 02,
-    A0, 0D, 06, 18, 34, 00, 00, E1, 03,
-    A0, 0D, 06, 18, 33, 0F, 83, 00, 00
+    A0, 0D, 06, 07, 33, 07, 40, 00, 00
 }
 
 NXP_RF_CONF_BLK_2={
-    20, 02, F9, 20, 
-    A0, 0D, 06, 1C, 34, 00, 00, E1, 03,
-    A0, 0D, 06, 1C, 33, 0F, 83, 00, 00,
-    A0, 0D, 06, 20, 4A, 00, 00, 00, 00,
-    A0, 0D, 06, 20, 42, 88, 10, FF, FF,
-    A0, 0D, 03, 20, 16, 00,
-    A0, 0D, 03, 20, 15, 00,
+    20, 02, F8, 1F, 
+    A0, 0D, 06, 18, 34, 00, 00, E1, 03, 
+    A0, 0D, 06, 18, 33, 0F, 83, 00, 00, 
+    A0, 0D, 06, 1C, 34, 00, 00, E1, 03, 
+    A0, 0D, 06, 1C, 33, 0F, 83, 00, 00, 
+    A0, 0D, 06, 20, 4A, 00, 00, 00, 00, 
+    A0, 0D, 06, 20, 42, 88, 10, FF, FF, 
+    A0, 0D, 03, 20, 16, 00, 
+    A0, 0D, 03, 20, 15, 00, 
     A0, 0D, 04, 22, 44, 22, 00,
-    A0, 0D, 06, 22, 2D, 50, 44, 0C, 00,
-    A0, 0D, 04, 32, 03, 40, 3D,
-    A0, 0D, 06, 32, 42, A8, 10, FF, FF,
-    A0, 0D, 03, 32, 16, 00,
-    A0, 0D, 03, 32, 15, 01,
-    A0, 0D, 03, 32, 0D, 22,
-    A0, 0D, 03, 32, 14, 22,
-    A0, 0D, 06, 32, 4A, 00, 07, 01, 08,
-    A0, 0D, 06, 34, 2D, 24, A7, 0C, 00,
-    A0, 0D, 06, 34, 34, 00, 00, EC, 03,
-    A0, 0D, 06, 34, 33, 0F, 01, 01, 70,
-    A0, 0D, 04, 34, 44, 22, 00,
-    A0, 0D, 06, 38, 4A, 33, 07, 00, 08,
-    A0, 0D, 06, 38, 42, 68, 10, FF, FF,
-    A0, 0D, 03, 38, 16, 00,
-    A0, 0D, 03, 38, 15, 00,
-    A0, 0D, 04, 3A, 44, 26, 00,
-    A0, 0D, 06, 3A, 2D, 15, 47, 0D, 00,
-    A0, 0D, 06, 3A, 34, 00, 00, E1, 03,
-    A0, 0D, 06, 3A, 33, 0B, 83, 00, 00,
-    A0, 0D, 06, 3C, 4A, 52, 07, 00, 1B,
-    A0, 0D, 06, 3C, 42, 68, 10, FF, FF,
-    A0, 0D, 03, 3C, 16, 00,
-    A0, 0D, 03, 3C, 15, 00,
-    A0, 0D, 04, 3E, 44, 26, 00
+    A0, 0D, 06, 22, 2D, 50, 44, 0C, 00, 
+    A0, 0D, 04, 32, 03, 40, 3D, 
+    A0, 0D, 06, 32, 42, F8, 10, FF, FF, 
+    A0, 0D, 03, 32, 16, 00, 
+    A0, 0D, 03, 32, 15, 01, 
+    A0, 0D, 03, 32, 0D, 22, 
+    A0, 0D, 03, 32, 14, 22, 
+    A0, 0D, 06, 32, 4A, 33, 07, 00, 08, 
+    A0, 0D, 06, 34, 2D, 24, A7, 0C, 00, 
+    A0, 0D, 06, 34, 34, 00, 00, EC, 03, 
+    A0, 0D, 06, 34, 33, 0F, 01, 01, 70, 
+    A0, 0D, 04, 34, 44, 22, 00, 
+    A0, 0D, 06, 38, 4A, 33, 07, 00, 08, 
+    A0, 0D, 06, 38, 42, 68, 10, FF, FF, 
+    A0, 0D, 03, 38, 16, 00, 
+    A0, 0D, 03, 38, 15, 00, 
+    A0, 0D, 04, 3A, 44, 26, 00, 
+    A0, 0D, 06, 3A, 2D, 15, 47, 0D, 00, 
+    A0, 0D, 06, 3A, 34, 00, 00, E1, 03, 
+    A0, 0D, 06, 3A, 33, 0B, 83, 00, 00, 
+    A0, 0D, 06, 3C, 4A, 52, 07, 00, 1B, 
+    A0, 0D, 06, 3C, 42, 68, 10, FF, FF
 }
 
 NXP_RF_CONF_BLK_3={
     20, 02, F9, 20, 
-    A0, 0D, 06, 3E, 2D, 15, 47, 0D, 00,
-    A0, 0D, 06, 3E, 34, 00, 00, E1, 03,
-    A0, 0D, 06, 3E, 33, 0B, 83, 00, 00,
-    A0, 0D, 06, 40, 42, F0, 10, FF, FF,
-    A0, 0D, 03, 40, 0D, 02,
-    A0, 0D, 03, 40, 14, 02,
+    A0, 0D, 03, 3C, 16, 00, 
+    A0, 0D, 03, 3C, 15, 00, 
+    A0, 0D, 04, 3E, 44, 26, 00, 
+    A0, 0D, 06, 3E, 2D, 15, 47, 0D, 00, 
+    A0, 0D, 06, 3E, 34, 00, 00, E1, 03, 
+    A0, 0D, 06, 3E, 33, 0B, 83, 00, 00, 
+    A0, 0D, 06, 40, 42, F0, 10, FF, FF, 
+    A0, 0D, 03, 40, 0D, 02, 
+    A0, 0D, 03, 40, 14, 02, 
     A0, 0D, 06, 40, 4A, 12, 07, 00, 00,
-    A0, 0D, 03, 40, 16, 00,
-    A0, 0D, 03, 40, 15, 00,
-    A0, 0D, 04, 42, 44, 26, 00,
-    A0, 0D, 06, 42, 2D, 15, 47, 0D, 00,
-    A0, 0D, 06, 42, 34, 00, 00, E1, 03,
-    A0, 0D, 06, 42, 33, 0B, 83, 00, 00,
-    A0, 0D, 04, 46, 44, 26, 00,
-    A0, 0D, 06, 46, 2D, 15, 25, 0D, 00,
-    A0, 0D, 06, 44, 4A, 21, 07, 00, 07,
-    A0, 0D, 06, 44, 42, 88, 10, FF, FF,
-    A0, 0D, 03, 44, 16, 00,
-    A0, 0D, 03, 44, 15, 00,
+    A0, 0D, 03, 40, 16, 00, 
+    A0, 0D, 03, 40, 15, 00, 
+    A0, 0D, 04, 42, 44, 26, 00, 
+    A0, 0D, 06, 42, 2D, 15, 47, 0D, 00, 
+    A0, 0D, 06, 42, 34, 00, 00, E1, 03, 
+    A0, 0D, 06, 42, 33, 0B, 83, 00, 00, 
+    A0, 0D, 04, 46, 44, 26, 00, 
+    A0, 0D, 06, 46, 2D, 15, 25, 0D, 00, 
+    A0, 0D, 06, 44, 4A, 21, 07, 00, 07, 
+    A0, 0D, 06, 44, 42, 88, 10, FF, FF, 
+    A0, 0D, 03, 44, 16, 00, 
+    A0, 0D, 03, 44, 15, 00, 
     A0, 0D, 04, 4A, 44, 21, 00,
-    A0, 0D, 06, 4A, 2D, 15, 9D, 0D, 00,
-    A0, 0D, 06, 48, 4A, 21, 07, 00, 07,
-    A0, 0D, 06, 48, 42, 88, 10, FF, FF,
-    A0, 0D, 03, 48, 16, 00,
-    A0, 0D, 03, 48, 15, 00,
-    A0, 0D, 04, 4E, 44, 26, 00,
-    A0, 0D, 06, 4E, 2D, 15, 25, 0D, 00,
-    A0, 0D, 06, 4C, 4A, 21, 07, 00, 07,
-    A0, 0D, 06, 4C, 42, 88, 10, FF, FF,
-    A0, 0D, 03, 4C, 16, 00,
-    A0, 0D, 03, 4C, 15, 00,
-    A0, 0D, 04, 52, 44, 26, 00
+    A0, 0D, 06, 4A, 2D, 15, 9D, 0D, 00, 
+    A0, 0D, 06, 48, 4A, 21, 07, 00, 07, 
+    A0, 0D, 06, 48, 42, 88, 10, FF, FF, 
+    A0, 0D, 03, 48, 16, 00, 
+    A0, 0D, 03, 48, 15, 00, 
+    A0, 0D, 04, 4E, 44, 26, 00, 
+    A0, 0D, 06, 4E, 2D, 15, 25, 0D, 00, 
+    A0, 0D, 06, 4C, 4A, 21, 07, 00, 07, 
+    A0, 0D, 06, 4C, 42, 88, 10, FF, FF
 }
 
 NXP_RF_CONF_BLK_4={
-    20, 02, F3, 1E, 
-    A0, 0D, 06, 52, 2D, 15, 25, 0D, 00,
-    A0, 0D, 06, 50, 42, 90, 10, FF, FF,
-    A0, 0D, 06, 50, 4A, 21, 07, 00, 07,
-    A0, 0D, 03, 50, 16, 00,
-    A0, 0D, 03, 50, 15, 00,
-    A0, 0D, 06, 56, 2D, 05, 9E, 0C, 00,
+    20, 02, F4, 1F, 
+    A0, 0D, 03, 4C, 16, 00, 
+    A0, 0D, 03, 4C, 15, 00, 
+    A0, 0D, 04, 52, 44, 26, 00, 
+    A0, 0D, 06, 52, 2D, 15, 25, 0D, 00, 
+    A0, 0D, 06, 50, 42, 90, 10, FF, FF, 
+    A0, 0D, 06, 50, 4A, 21, 07, 00, 07, 
+    A0, 0D, 03, 50, 16, 00, 
+    A0, 0D, 03, 50, 15, 00, 
+    A0, 0D, 06, 56, 2D, 05, 9E, 0C, 00, 
     A0, 0D, 04, 56, 44, 22, 00,
-    A0, 0D, 06, 5C, 2D, 05, 9E, 0C, 00,
-    A0, 0D, 04, 5C, 44, 26, 00,
-    A0, 0D, 06, 54, 42, 88, 10, FF, FF,
-    A0, 0D, 06, 54, 4A, 33, 07, 01, 07,
-    A0, 0D, 03, 54, 16, 00,
-    A0, 0D, 03, 54, 15, 00,
-    A0, 0D, 06, 5A, 42, 90, 10, FF, FF,
-    A0, 0D, 06, 5A, 4A, 31, 07, 01, 07,
-    A0, 0D, 03, 5A, 16, 00,
-    A0, 0D, 03, 5A, 15, 00,
-    A0, 0D, 06, 98, 2F, CF, 05, 80, 17,
-    A0, 0D, 06, 98, 42, 00, 00, F2, F2,
-    A0, 0D, 06, 9A, 42, 00, 00, F2, F2,
-    A0, 0D, 06, 30, 44, 12, 90, 03, 00,
-    A0, 0D, 06, 6C, 44, A3, 90, 03, 00,
-    A0, 0D, 06, 6C, 30, CF, 00, 08, 00,
-    A0, 0D, 06, 6C, 2F, 8F, 05, 80, 0C,
-    A0, 0D, 06, 70, 2F, 8F, 05, 80, 12,
-    A0, 0D, 06, 70, 30, CF, 00, 08, 00,
-    A0, 0D, 03, 70, 2E, 40,
-    A0, 0D, 03, 70, 45, 30,
-    A0, 0D, 06, 70, 44, A3, 90, 03, 00,
-    A0, 0D, 06, 74, 2F, 6F, 05, 80, 12
+    A0, 0D, 06, 5C, 2D, 05, 9E, 0C, 00, 
+    A0, 0D, 04, 5C, 44, 26, 00, 
+    A0, 0D, 06, 54, 42, 88, 10, FF, FF, 
+    A0, 0D, 06, 54, 4A, 33, 07, 01, 07, 
+    A0, 0D, 03, 54, 16, 00, 
+    A0, 0D, 03, 54, 15, 00, 
+    A0, 0D, 06, 5A, 42, 90, 10, FF, FF, 
+    A0, 0D, 06, 5A, 4A, 31, 07, 01, 07, 
+    A0, 0D, 03, 5A, 16, 00, 
+    A0, 0D, 03, 5A, 15, 00, 
+    A0, 0D, 06, 98, 2F, CF, 05, 80, 17, 
+    A0, 0D, 06, 98, 42, 00, 00, FF, F1, 
+    A0, 0D, 06, 9A, 42, 00, 00, FF, F1, 
+    A0, 0D, 06, 30, 44, 12, 90, 03, 00, 
+    A0, 0D, 06, 6C, 44, A3, 90, 03, 00, 
+    A0, 0D, 06, 6C, 30, CF, 00, 08, 00, 
+    A0, 0D, 06, 6C, 2F, 8F, 05, 80, 0C, 
+    A0, 0D, 06, 70, 2F, 8F, 05, 80, 12, 
+    A0, 0D, 06, 70, 30, CF, 00, 08, 00, 
+    A0, 0D, 03, 70, 2E, 40, 
+    A0, 0D, 03, 70, 45, 30
 }
 
 NXP_RF_CONF_BLK_5={
-    20, 02, FA, 1D, 
-    A0, 0D, 06, 74, 30, D5, 00, 40, 00,
-    A0, 0D, 06, 74, 44, A3, 90, 03, 00,
-    A0, 0D, 06, 78, 2F, 3F, 07, 80, C1,
-    A0, 0D, 06, 78, 30, 50, 00, 10, 00,
-    A0, 0D, 06, 78, 44, A3, 90, 03, 00,
-    A0, 0D, 06, 7C, 2F, CF, 05, 80, 17,
-    A0, 0D, 06, 7C, 30, C8, 00, 64, 00,
-    A0, 0D, 06, 7C, 44, A3, 90, 03, 00,
-    A0, 0D, 06, 80, 2F, CF, 05, 80, 17,
-    A0, 0D, 06, 80, 30, C8, 00, 64, 00,
-    A0, 0D, 06, 80, 44, A3, 90, 03, 00,
-    A0, 0D, 06, 84, 2F, CF, 05, 80, 17,
-    A0, 0D, 06, 84, 30, C8, 00, 64, 00,
-    A0, 0D, 06, 84, 44, A3, 90, 03, 00,
-    A0, 0D, 06, 88, 2F, B1, 05, 80, 17,
-    A0, 0D, 06, 88, 30, A8, 00, 64, 00,
-    A0, 0D, 06, 88, 44, A3, 90, 03, 00,
-    A0, 0D, 06, 8E, 44, 12, 90, 03, 00,
-    A0, 0D, 06, 94, 44, 12, 90, 03, 00,
-    A0, 0D, 03, 10, 43, 20,
+    20, 02, F4, 1C, 
+    A0, 0D, 06, 70, 44, A3, 90, 03, 00, 
+    A0, 0D, 06, 74, 2F, 6F, 05, 80, 12, 
+    A0, 0D, 06, 74, 30, D5, 00, 40, 00, 
+    A0, 0D, 06, 74, 44, A3, 90, 03, 00, 
+    A0, 0D, 06, 78, 2F, 3F, 07, 80, C1, 
+    A0, 0D, 06, 78, 30, 50, 00, 10, 00, 
+    A0, 0D, 06, 78, 44, A3, 90, 03, 00, 
+    A0, 0D, 06, 7C, 2F, CF, 05, 80, 17, 
+    A0, 0D, 06, 7C, 30, B0, 00, 10, 00,
+    A0, 0D, 06, 7C, 44, A3, 90, 03, 00, 
+    A0, 0D, 06, 80, 2F, CF, 05, 80, 17, 
+    A0, 0D, 06, 80, 30, C8, 00, 64, 00, 
+    A0, 0D, 06, 80, 44, A3, 90, 03, 00, 
+    A0, 0D, 06, 84, 2F, CF, 05, 80, 17, 
+    A0, 0D, 06, 84, 30, C8, 00, 64, 00, 
+    A0, 0D, 06, 84, 44, A3, 90, 03, 00, 
+    A0, 0D, 06, 88, 2F, B1, 05, 80, 17, 
+    A0, 0D, 06, 88, 30, A8, 00, 64, 00, 
+    A0, 0D, 06, 88, 44, A3, 90, 03, 00, 
+    A0, 0D, 06, 8E, 44, 12, 90, 03, 00, 
+    A0, 0D, 06, 94, 44, 12, 90, 03, 00, 
+    A0, 0D, 03, 10, 43, 20, 
     A0, 0D, 06, 10, 35, FF, 01, FF, 02,
     A0, 0D, 06, 10, 34, F7, 7F, 00, 00,
-    A0, 0D, 06, 6A, 42, F8, 10, FF, FF,
-    A0, 0D, 03, 6A, 16, 00,
-    A0, 0D, 03, 6A, 15, 01,
-    A0, 0D, 06, 6A, 4A, 30, 0F, 01, 1F,
-    A0, 0D, 06, 8C, 42, 88, 10, FF, FF,
-    A0, 0D, 06, 8C, 4A, 33, 07, 01, 07,
-    A0, 0D, 03, 8C, 16, 00
+    A0, 0D, 06, 6A, 42, F8, 10, FF, FF, 
+    A0, 0D, 03, 6A, 16, 00, 
+    A0, 0D, 03, 6A, 15, 01, 
+    A0, 0D, 06, 6A, 4A, 30, 0F, 01, 1F
 }
 
 NXP_RF_CONF_BLK_6={
-    20, 02, A1, 12, 
-    A0, 0D, 03, 8C, 15, 00,
-    A0, 0D, 06, 92, 42, 90, 10, FF, FF,
-    A0, 0D, 06, 92, 4A, 31, 07, 01, 07,
-    A0, 0D, 03, 92, 16, 00,
-    A0, 0D, 03, 92, 15, 00,
-    A0, 0D, 03, 24, 41, 40,
-    A0, 0D, 06, 24, 42, 00, 00, F2, F2,
-    A0, 0D, 03, 28, 41, 40,
-    A0, 0D, 03, 8A, 41, 40,
-    A0, 0D, 03, 90, 41, 40,
-    A0, 0D, 06, 0A, 30, C8, 00, 64, 00,
-    A0, 0D, 06, 0A, 2F, AF, 05, 80, 17,
-    A0, 0D, 03, 0A, 48, 14,
+    20, 02, D7, 19, 
+    A0, 0D, 06, 8C, 42, 88, 10, FF, FF, 
+    A0, 0D, 06, 8C, 4A, 33, 07, 01, 07, 
+    A0, 0D, 03, 8C, 16, 00, 
+    A0, 0D, 03, 8C, 15, 00, 
+    A0, 0D, 06, 92, 42, 90, 10, FF, FF, 
+    A0, 0D, 06, 92, 4A, 31, 07, 01, 07, 
+    A0, 0D, 03, 92, 16, 00, 
+    A0, 0D, 03, 92, 15, 00, 
+    A0, 0D, 03, 24, 41, 40, 
+    A0, 0D, 06, 24, 42, 00, 00, FF, F1, 
+    A0, 0D, 03, 28, 41, 40, 
+    A0, 0D, 03, 8A, 41, 40, 
+    A0, 0D, 03, 90, 41, 40, 
+    A0, 0D, 03, 08, 40, 10,
+    A0, 0D, 06, 08, 45, C0, 82, 00, 00,
     A0, 0D, 06, 0A, 44, A3, 90, 03, 00,
-    A0, 0D, 06, 0A, 34, 26, 65, E5, 03,
+    A0, 0D, 06, 0A, 45, 80, 40, 00, 00,
+    A0, 0D, 06, 0A, 30, C8, 00, 64, 00,
+    A0, 0D, 06, 0A, 2F, AF, 05, 80, 17, 
+    A0, 0D, 03, 0A, 48, 10, 
+    A0, 0D, 06, 0A, 34, 26, 65, E5, 03, 
     A0, 0D, 06, 0A, 33, 0F, 01, 00, 70,
+    A0, 0D, 03, 0A, 40, 00,    
     A0, 1D, 11, 54, 33, 14, 17, 00, AA, 85, 00, 80, 55, 2A, 04, 00, 63, 00, 00, 00,
     A0, 1E, 11, 1C, 13, 14, 14, 00, 6F, 97, 00, 00, 00, 10, 04, 00, 63, 02, 00, 00
 }
@@ -598,7 +612,7 @@ NXP_RF_CONF_BLK_6={
 ## Set configuration optimization decision setting
 ## Enable    = 0x01
 ## Disable   = 0x00
-NXP_SET_CONFIG_ALWAYS=0x01 
+NXP_SET_CONFIG_ALWAYS=0x00 
 
 ###############################################################################
 #Set the default AID Power state :
@@ -668,7 +682,7 @@ NXP_CORE_CONF_EXTN={20, 02, 43, 10,
         A0, CD, 01, 1F, 
         A0, DD, 01, 2D, 
         A0, EC, 01, 01, 
-        A0, ED, 01, 03, 
+        A0, ED, 01, 83, 
         A0, F2, 01, 01
         }
 
