Revert "op3: Add vendor changes to wifi configuration"
This reverts commit fb49046a6f729a6e43c357caf48bc0bb81c99eb4.

Change-Id: Iefcf84f46b68e37606f8ac513dbee6a449c28fbd

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -1,17 +1,7 @@
 # This file allows user to override the factory
 
 # defaults for the WLAN Driver
-# ifdef VENDOR_EDIT
-gInitialScanNoDFSChnl=1
-gInitialDwellTime=20
-gSoftApMaxPeers=15
-gRoamBmissFirstBcnt=25
-gRoamBmissFinalBcnt=35
-RTSThreshold=117350
-gTcpDelAckThresholdHigh=10000
-gDroppedPktDisconnectTh=1024
-gPNOScanTimerRepeatValue=15
-# endif /* VENDOR_EDIT */
+
 
 # Enable IMPS or not
 gEnableImps=1
@@ -152,7 +142,7 @@ gFixedRate=0
 
 # RTS threshold
 
-#RTSThreshold=1048576
+RTSThreshold=1048576
 
 
 # Intra-BSS forward
@@ -196,11 +186,7 @@ FastRoamEnabled=1
 #Check if the AP to which we are roaming is better than current AP in terms of RSSI.
 #Checking is disabled if set to Zero.Otherwise it will use this value as to how better
 #the RSSI of the new/roamable AP should be for roaming
-# ifdef VENDOR_EDIT
-RoamRssiDiff=5
-# else
-#RoamRssiDiff=3
-# endif /* VENDOR_EDIT */
+RoamRssiDiff=3
 
 # If the RSSI of any available candidate is better than currently associated
 # AP by at least gImmediateRoamRssiDiff, then being to roam immediately (without
@@ -433,10 +419,7 @@ gEnableActiveModeOffload=1
 gScanAgingTime=0
 
 #Enable Scan Results Aging based on number of scans
-# ifdef VENDOR_EDIT
-# default value is 3
-#gScanResultAgeCount=1
-# endif /* VENDOR_EDIT */
+gScanResultAgeCount=1
 
 #Enable Power saving mechanism Based on Android Framework
 #If set to 0 Driver internally control the Power saving mechanism
@@ -567,7 +550,7 @@ gDFSradarMappingPriMultiplier=4
 gPNOScanSupport=1
 
 # Perform PNO fast scan this many number of times
-#gPNOScanTimerRepeatValue=6
+gPNOScanTimerRepeatValue=6
 
 # PNO slow scan period = gPNOSlowScanMultiplier times PNO fast scan period
 # Example: fast scan period is passed from framework (default = 10 sec), then
@@ -600,11 +583,7 @@ gSapSccChanAvoidance=0
 # help if the lifetime in RA is less than 3*60=3min. Then
 # we need to change it, though it is uncommon.
 # Enable RA filtering offload
-#ifdef VENDOR_EDIT
-gRAFilterEnable=0
-#else
-#gRAFilterEnable=1
-#endif VENDOR_EDIT
+gRAFilterEnable=1
 gRArateLimitInterval=300
 
 # Inactivity time (in ms) to end TX Service Period while in IBSS power save mode
@@ -663,11 +642,7 @@ gMCAddrListEnable=1
 # 0 - disable
 # 1 - enable
 
-#ifdef VENDOR_EDIT
-gRuntimePM=0
-#else
-#gRuntimePM=1
-#endif VENDOR_EDIT
+gRuntimePM=1
 # When gRuntimePM is disabled gRuntimeAutoTime won't take effect.
 # The Time is in msec.
 # 100 is min, 10000 is max, 500 is default.
