--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -46,7 +46,7 @@ on fs
 
 on init
     write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
-    export LD_SHIM_LIBS /system/lib/hw/camera.msm8996.so|libcamera_shim.so:/system/lib/libopcamera_native_modules.so|libcamera_shim.so
+    export LD_SHIM_LIBS /system/lib/hw/camera.msm8996.so|libcamera_shim.so
 
 on post-fs-data
     mkdir /data/tombstones 0771 system system
@@ -551,6 +551,11 @@ service ifaadaemon /system/bin/ifaadaemon
     class late_start
     user system
     group system
+    writepid /dev/cpuset/system-background/tasks
+
+service remosaic_daemon /system/bin/remosaic_daemon
+    class late_start
+    user camera
     writepid /dev/cpuset/system-background/tasks
 
 # such color
